--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
-version: "1"
+version: '1'
 services:
-	web:
-		
+  web:
+    restart: always
+    build: .
+    ports:
+     - "8000:80"
+    expose:
+     - "80"
+    volumes:
+     - .:/app
